--- a/rootfs/Dockerfile
+++ b/rootfs/Dockerfile
@@ -16,10 +16,6 @@ FROM BASEIMAGE
 
 CROSS_BUILD_COPY qemu-QEMUARCH-static /usr/bin/
 
-RUN clean-install \
-  diffutils \
-  dumb-init
-
 # Create symlinks to redirect nginx logs to stdout and stderr docker log collector
 # This only works if nginx is started with CMD or ENTRYPOINT
 RUN mkdir -p /var/log/nginx \
@@ -28,6 +24,7 @@ RUN mkdir -p /var/log/nginx \
 
 COPY . /
 
-ENTRYPOINT ["/usr/bin/dumb-init"]
+#ENTRYPOINT ["/usr/bin/dumb-init"]
 
-CMD ["/nginx-ingress-controller"]
+#CMD ["/nginx-ingress-controller"]
+ENTRYPOINT ["/nginx-ingress-controller"]
